--- a/Group Project - Space Shooter/Project/Project1.vcxproj.filters
+++ b/Group Project - Space Shooter/Project/Project1.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="GUI.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Cat.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp">
