--- a/Group Project - Space Shooter/Project/Project1.vcxproj
+++ b/Group Project - Space Shooter/Project/Project1.vcxproj
@@ -32,6 +32,7 @@
     <ClInclude Include="Level.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="MenuState.h" />
+    <ClInclude Include="Star.h" />
     <ClInclude Include="StateMachine.h" />
     <ClInclude Include="TextureManager.h" />
   </ItemGroup>
@@ -55,6 +56,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="MenuState.cpp" />
+    <ClCompile Include="Star.cpp" />
     <ClCompile Include="StateMachine.cpp" />
     <ClCompile Include="TextureManager.cpp" />
   </ItemGroup>
