--- a/Group Project - Space Shooter/Project/Project1.vcxproj.filters
+++ b/Group Project - Space Shooter/Project/Project1.vcxproj.filters
@@ -21,6 +21,7 @@
     <ClCompile Include="StateMachine.cpp" />
     <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="Star.cpp" />
+    <ClCompile Include="Rock.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
@@ -49,6 +50,7 @@
     <ClInclude Include="Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Rock.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Header Files">
