--- a/Group Project - Space Shooter/Project/Project1.vcxproj
+++ b/Group Project - Space Shooter/Project/Project1.vcxproj
@@ -21,6 +21,7 @@
     <ClInclude Include="BulletManager.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="GameObject.h" />
@@ -45,6 +46,7 @@
     <ClCompile Include="BulletManager.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameState.cpp" />
     <ClCompile Include="GameObject.cpp" />
