--- a/Group Project - Space Shooter/Project/Project1.vcxproj
+++ b/Group Project - Space Shooter/Project/Project1.vcxproj
@@ -33,6 +33,8 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="MenuState.h" />
     <ClInclude Include="Rock.h" />
+    <ClInclude Include="Sound.h" />
+    <ClInclude Include="SoundManager.h" />
     <ClInclude Include="Star.h" />
     <ClInclude Include="StateMachine.h" />
     <ClInclude Include="TextureManager.h" />
@@ -61,6 +63,7 @@
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="MenuState.cpp" />
     <ClCompile Include="Rock.cpp" />
+    <ClCompile Include="SoundManager.cpp" />
     <ClCompile Include="Star.cpp" />
     <ClCompile Include="StateMachine.cpp" />
     <ClCompile Include="TextureManager.cpp" />
